<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:lottie_rawRes="@raw/nike2"
            app:lottie_autoPlay="true"/>

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="NikeStore_example_com"
            android:textAppearance="?textAppearanceBody1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/primary_bold"
            android:textStyle="bold"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/shape_divider"
            android:showDividers="middle|beginning|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favoriteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_favorites_24dp" />
            <TextView
                android:id="@+id/orderHistoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory"
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_order_history" />

            <TextView
                android:id="@+id/authBtn"
                style="@style/ProfileLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signOut"
                app:drawableStartCompat="@drawable/ic_sign_out" />

        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>