<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:clipToPadding="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline6"
        android:text="@string/purchaseDetail"
        android:layout_marginStart="16dp"
        android:textColor="?android:textColorSecondary"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalPrice"
                    android:layout_gravity="start"
                    android:textAppearance="?textAppearanceBody1"/>

                <TextView
                    android:id="@+id/totalPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1,800,000"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:textAppearance="?textAppearanceBody1"/>
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?dividerColor"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shippingCost"
                    android:layout_gravity="start"
                    android:textAppearance="?textAppearanceBody1"/>

                <TextView
                    android:id="@+id/shippingCostTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10,000"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:textAppearance="?textAppearanceBody1"/>
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?dividerColor"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payablePrice"
                    android:layout_gravity="start"
                    android:textAppearance="?textAppearanceBody1"/>

                <TextView
                    android:id="@+id/payablePriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1,700,000"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:textAppearance="?textAppearanceBody1"/>
            </FrameLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>