<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_nike_logo" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/background_et_search"
                    android:hint="@string/search"
                    android:paddingStart="54dp"
                    android:paddingEnd="24dp"
                    android:textColor="?colorOnSurface"
                    android:textColorHint="?android:textColorSecondary"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="38dp"
                    app:srcCompat="@drawable/ic_search" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager_main_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

                <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                    android:id="@+id/sliderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="12dp"
                    app:dampingRatio="1"
                    app:dotsClickable="true"
                    app:dotsColor="@color/black"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="5dp"
                    app:dotsSpacing="3dp"
                    app:dotsStrokeColor="#E0DCDC"
                    app:dotsStrokeWidth="4dp"
                    app:stiffness="300" />


            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16sp"
                android:paddingEnd="16sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest"
                    android:layout_gravity="center_vertical|start"
                    android:textAppearance="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewLatestProductBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/viewAll" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestProductRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12sp"
                android:paddingEnd="12sp"
                android:clipToPadding="false"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16sp"
            android:paddingEnd="16sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:layout_gravity="center_vertical|start"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="?android:textColorSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewAll"
                android:layout_gravity="end|center_vertical"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularProductRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:clipToPadding="false"/>


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>